# NTS-811s1-Desktop-Application

./: README.md  index.html  package-lock.json  package.json  vite.config.js
public/data/: mission_schedule_config.xml
src/: App.css  App.jsx  index.css  main.jsx  tauri-shim.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/assets/css/: Base.css  BatteryComponent.css  ConfirmDialog.css  (+17 more)
src/component/: AllSessionsModal.jsx  BatteryComponent.jsx  ConfirmDialog.jsx  ConnectionLostModal.jsx  CustomOclock.jsx  DateTimeComponent.jsx  ErrorToastComponent.jsx  ExportModeModal.jsx  FreqTableSelectModal.jsx  HeaderComponent.jsx  HideComponent.jsx  InformationComponent.jsx  LoadingComponent.jsx  NewSessionModal.jsx  ProcessBarComponent.jsx  SaveAllProgress.jsx  SettingComponent.jsx  Sidebar.jsx
src/constants/: appInf.jsx  toastId.jsx  validFreq.jsx
src/context/: ConnectionContext.jsx  DefaultDataContext.jsx  EditingExportContext.jsx  IdleTimeoutContext.jsx  OutletDisableContext.jsx  SaveAllContext.jsx  SaveAllProgressContext.jsx  SessionTimeoutContext.jsx  SessionTimeoutWrapper.jsx  ThemeContext.jsx
src/helper/: hostHelper.jsx  settingHelper.jsx  statusHelper.jsx
src/hooks/: useBattery.jsx  useConnectionStatus.jsx  useDefaultDataMode.jsx  useSessionTimeout.jsx  useThemeWatcher.jsx
src/languages/: en.jsx  vi.jsx
src/pages/: LoadingPage.jsx  Login.jsx
src/routing/: OpenRouting.jsx  PrivateRouting.jsx
src/store/: store.jsx
src/utils/: axiosConfig.jsx  formatProgErr.jsx  i18n.jsx
(+14 files in other folders)
