[package]
name = "nts_811s1_desktop_app"
version = "1.0.0"
description = "NTS 811s1 Desktop App"
authors = ["you"]
edition = "2021"

[lib]
name = "nts_811s1_desktop_app"
crate-type = ["cdylib", "rlib"]

[dependencies]
tauri = { version = "2.10.2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["clock"] }

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
